--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@nestjs/graphql": "^12.0.11",
     "@nestjs/mongoose": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "graphql": "^16.8.1",
     "mongoose": "^8.0.3",
     "reflect-metadata": "^0.1.13",
