--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.7",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
